--- a/src/content/ideas/2025/gios-pr3/index.mdx
+++ b/src/content/ideas/2025/gios-pr3/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'IPC in Action: Building a High-Performance Proxy & Cache'
-description: 'A dive into a project that explores IPC and synchronization in C'
+title: 'A Deep Dive into IPC with a Proxy-Cache Project'
+description: 'Exploring Inter-Process Communication and synchronization in C by building a high-performance proxy and cache.'
 date: '2025-07-10'
-updated: '2025-07-22'
+updated: '2025-10-24'
 status: 'complete'
 type: 'project'
 tags: ['GIOS', 'operating-systems', 'c', 'IPC', 'socket-programming', 'MSCS']
@@ -41,13 +41,13 @@ import placeholderSharedMemoryImg from "./placeholder-shared-memory.png";
 
 ## Introduction: The Scalability Problem
 
-Imagine a wildly popular news website. On a big story day, millions of users are all trying to load the same front-page article and its images. The main web server, buried deep in a datacenter, gets hammered with identical requests, spending its cycles reading the same files from disk over and over. For users on the other side of the world, the experience is slow because data must travel thousands of miles. This is a classic scalability bottleneck. How do you serve popular content to a global audience, quickly and efficiently, without overwhelming your origin server?
+A classic scalability challenge is serving popular content to a global audience efficiently. When a major news story breaks, a web server can be overwhelmed by millions of users requesting the same article. The server spends valuable cycles reading the same files from disk repeatedly, and users far from the datacenter experience slow load times. How can we deliver content quickly without overloading the origin server?
 
-The solution is a one-two punch of architectural patterns: the **cache server** and the **proxy server**.
+The solution involves two key architectural patterns: the **cache server** and the **proxy server**.
 
-A **cache server** is a simple but powerful idea: it's a separate, specialized server that keeps temporary copies of frequently requested data. Instead of the main server handling every request, the cache can serve up a copy of that popular news article instantly, from memory. This dramatically reduces the load on the origin and provides a much faster response.
+A **cache server** is based on a simple idea: it stores temporary copies of frequently requested data. Instead of the main server handling every request, the cache can serve a copy of a popular article almost instantly, often from memory. This reduces the load on the origin and provides a much faster response.
 
-But how do client requests get directed to the cache instead of the main server? That's the job of a **proxy server**. A proxy acts as an intelligent intermediary, a gatekeeper that sits between the client and the internet. When a request comes in, the proxy intercepts it. It can then make a smart decision: "Do I have a fresh copy of this in a nearby cache?" If so, it serves it directly. If not, *then* it forwards the request to the main origin server, gets the response, and passes it back to the client—while also telling the cache to store a copy for next time.
+But how do client requests get directed to the cache instead of the main server? That's where a **proxy server** comes in. A proxy acts as an intelligent intermediary between the client and the internet. When a request arrives, the proxy intercepts it and decides what to do. If a fresh copy is available in a nearby cache, it serves it directly. If not, it forwards the request to the main origin server, passes the response back to the client, and instructs the cache to store a copy for future requests.
 
 <Figure
   src={proxyCacheFlowImg}
@@ -55,9 +55,9 @@ But how do client requests get directed to the cache instead of the main server?
   caption="The proxy and cache are separate processes, communicating via dedicated IPC channels."
 />
 
-In this project in Georgia Tech's [CS 6200: Graduate Introduction to Operating Systems (GIOS)](https://omscs.gatech.edu/cs-6200-introduction-operating-systems), the challenge was to build exactly this system: a cooperating proxy and cache. This project dovetails with the [first project in the course](/ideas/2025/gios-pr1/), where I created a multithreaded client and file server (the origin server). The proxy and cache processes built in this project sit between the client and origin server and act as an intermediary to improve performance.
+In Georgia Tech's [CS 6200: Graduate Introduction to Operating Systems (GIOS)](https://omscs.gatech.edu/cs-6200-introduction-operating-systems), I had the opportunity to build this exact system: a cooperating proxy and cache. This project built upon the [first project in the course](/ideas/2025/gios-pr1/), where I created a multithreaded client and file server. The proxy and cache processes developed in this project sit between the client and origin server, acting as an intermediary to improve performance.
 
-This project was about two distinct processes that had to communicate and coordinate. This forced a deep dive into one of the most fundamental topics in operating systems: **Inter-Process Communication (IPC)**. How could we pass massive amounts of file data from a cache process to a proxy process with minimal overhead? This post explores that journey, and the powerful, tricky, and essential world of IPC that makes systems like this possible.
+This project involved two distinct processes that needed to communicate and coordinate, which required a deep dive into a fundamental topic in operating systems: **Inter-Process Communication (IPC)**. How could I pass large amounts of file data from a cache process to a proxy process with minimal overhead? This post explores that journey and the powerful, tricky, and essential world of IPC that makes such systems possible.
 
 > [!note]
 > This post is meant to be a showcase of the work I did on the project and the concepts I learned from it. For a broader overview of all concepts covered in the course, please see the companion post: [GIOS: A Retrospective](/ideas/2025/gios-retro/).
@@ -65,16 +65,16 @@ This project was about two distinct processes that had to communicate and coordi
 
 ## The Architecture: A Tale of Two Processes
 
-In the real world, the line between a proxy and a cache is often blurry. It's crucial to understand their distinct roles and how this project intentionally separates them to create a specific engineering challenge.
+In production systems, the distinction between a proxy and a cache can be blurred. For this project, their roles were intentionally separated to create a specific engineering challenge focused on IPC.
 
 ### The Modern Proxy: A Versatile Gatekeeper
 
-A proxy server is an intermediary that sits between a client and a server. As [Wikipedia explains](https://en.wikipedia.org/wiki/Proxy_server), there are two main types:
+A proxy server acts as an intermediary between a client and a server. As [Wikipedia explains](https://en.wikipedia.org/wiki/Proxy_server), there are two main types:
 
 *   **Forward Proxy:** Acts on behalf of a *client* or a network of clients. When you use a proxy at a company or school to access the internet, you're using a forward proxy. It can be used to enforce security policies, filter content, or mask the client's identity.
 *   **Reverse Proxy:** Acts on behalf of a *server* or a pool of servers. When you connect to a major website, you're almost certainly talking to a reverse proxy. It presents a single, unified entry point to a complex system of backend services.
 
-Reverse proxies are the workhorses of the modern web, often handling multiple critical tasks beyond just forwarding requests:
+Reverse proxies are fundamental to the modern web, handling several critical tasks beyond just forwarding requests:
 - **Load Balancing:** Distributing incoming traffic across many backend servers.
 - **SSL Termination:** Decrypting incoming HTTPS traffic so backend servers don't have to.
 - **Authentication:** Verifying user credentials before passing a request to a protected service.
@@ -82,12 +82,12 @@ Reverse proxies are the workhorses of the modern web, often handling multiple cr
 
 ### The Project's Design: An Intentional Separation
 
-In a production system like Nginx or a Content Delivery Network (CDN), the proxy and cache logic are typically integrated into the same highly-optimized application. For this project, however, the two were explicitly separated into distinct processes to create a focused challenge in systems programming.
+While a production system like Nginx or a Content Delivery Network (CDN) would typically integrate proxy and cache logic into a single, highly-optimized application, this project intentionally separated them into distinct processes. This design created a focused challenge in systems programming.
 
 1.  **The Proxy Process**: This acts as a simple reverse proxy. Its only jobs are to intercept client requests, ask the cache if it has the file, and if not, use `libcurl` to fetch it from the origin server. It handles the network I/O and protocol logic.
 2.  **The Cache Process**: This is a pure, specialized key-value store. Its only job is to store and retrieve file data from memory. It doesn't know about `GETFILE` or HTTP; it only responds to commands from the proxy.
 
-This artificial separation was the heart of the project. By splitting these tightly-coupled roles, the primary engineering problem became: **how to build a high-bandwidth, low-latency communication channel between them?** This forces a deep dive into Inter-Process Communication, making it the central lesson.
+This separation was central to the project's design. By splitting these tightly-coupled roles, the primary engineering problem became building a high-bandwidth, low-latency communication channel between them. This necessitated a deep dive into Inter-Process Communication, making it the core learning objective.
 
 <Figure
   src={proxyCacheProcessesImg}
@@ -97,11 +97,11 @@ This artificial separation was the heart of the project. By splitting these tigh
 
 ## A Primer on Inter-Process Communication (IPC)
 
-Modern operating systems are built on a bedrock principle: **process isolation**. Each process gets its own private virtual address space, its own chunk of memory that no other process can touch. This is a crucial security and stability feature. Without it, a bug in your web browser could crash your entire operating system. But this isolation creates a problem: what if processes *need* to cooperate? That's where **Inter-Process Communication (IPC)** comes in. The OS provides a set of controlled "doorways" through the walls of process isolation, ensuring that communication happens in a structured and safe way.
+Modern operating systems are built on the principle of **process isolation**. Each process has its own private virtual address space, a protected memory region that other processes cannot access. This is a crucial feature for security and stability, as it prevents a bug in one application from crashing the entire system. However, this isolation presents a challenge when processes need to cooperate. To address this, the OS provides **Inter-Process Communication (IPC)** mechanisms, which are controlled "doorways" that allow structured and safe communication between processes.
 
-IPC mechanisms fall into two main families: **message-based** and **memory-based**.
+IPC mechanisms can be broadly categorized into two families: **message-based** and **memory-based**.
 
-*   In **message-based IPC**, the kernel acts as a post office. One process packages data into a message and hands it to the kernel (a system call); the kernel then delivers it to the other process (another system call). The data has to be copied from the virtual memory of the sending process to the kernel and then from the kernel to the virtual memory of the receiving process. This is safe and structured, but the constant kernel involvement and data copying create overhead. Common examples include **Pipes** for simple byte streams, **Message Queues** for structured messages, and **Sockets** for network communication.
+*   In **message-based IPC**, the kernel acts as a message broker. One process packages data into a message and sends it to the kernel via a system call. The kernel then delivers the message to the other process, which involves another system call. This process requires copying the data from the sender's virtual memory to the kernel and then from the kernel to the receiver's virtual memory. While this approach is safe and structured, the overhead from kernel involvement and data copying can be significant. Common examples include **Pipes** for simple byte streams, **Message Queues** for structured messages, and **Sockets** for network communication.
 
 <Figure 
   src={messageBasedIpcImg}
@@ -110,7 +110,7 @@ IPC mechanisms fall into two main families: **message-based** and **memory-based
   width={500}
 />
 
-*   In **memory-based IPC**, the kernel's role is more like a city planner. It designates a specific region of physical RAM and maps it into the address space of multiple processes. Once this **Shared Memory** region is established, the kernel gets out of the way. Processes can read and write to it directly at memory speed, with no copying or system calls. This offers incredible performance but comes with a major risk: without coordination, processes can interfere with each other, leading to corrupted data.
+*   In **memory-based IPC**, the kernel's role is to set up a shared environment. It designates a specific region of physical RAM and maps it into the address spaces of multiple processes. Once this **Shared Memory** region is established, the kernel steps aside, and processes can read and write to it directly at memory speed, without system calls or data copying. This offers exceptional performance but introduces a significant risk: without proper coordination, processes can interfere with each other, leading to data corruption.
 
 <Figure
   src={memoryBasedIpcImg}
@@ -119,11 +119,9 @@ IPC mechanisms fall into two main families: **message-based** and **memory-based
   width={500}
 />
 
+This risk highlights the need for **synchronization primitives**. When using shared memory, it's essential to control access to prevent race conditions. **Semaphores** are a classic tool for this purpose, acting as a traffic light to ensure that only one process can access the shared "intersection" at a time. They don't transfer data themselves but make it safe for other mechanisms to do so.
 
-
-This risk highlights the need for a separate class of IPC tool: **synchronization primitives**. When using shared memory, it's essential to have a way to control access. **Semaphores** are a classic tool for this job, acting as a traffic light that ensures only one process can enter the shared "intersection" at a time. They don't transfer data themselves, but they make it safe for other mechanisms to do so.
-
-For this project, the goal was maximum performance, which pointed to a hybrid approach: **Shared Memory** for the heavy lifting (transferring file data) and a **Message Queue** for coordination.
+For this project, the goal was maximum performance, which led to a hybrid approach: **Shared Memory** for transferring large file data and a **Message Queue** for coordination.
 
 The project mandated a strict division of this communication:
 - A high-speed **data channel** for transferring the large file contents.
@@ -208,19 +206,19 @@ This two-semaphore system elegantly ensures that the reader never reads an incom
 
 ## Design in Practice: Synchronization and Robustness
 
-With the core components defined, the real challenge lay in making them work together reliably. This involved not just preventing data corruption, but also designing the system to handle the realities of process lifecycle and startup.
+With the core components defined, the real challenge was making them work together reliably. This involved not just preventing data corruption but also designing the system to handle the realities of process lifecycles and startup.
 
 ### The Coordination Challenge
 
-With a message queue for commands, shared memory for bulk data, and semaphores for synchronization, the next step is to weave them into a coherent protocol. This is where the core design challenge lies. It's not enough to have the right tools; they must be orchestrated correctly.
+With a message queue for commands, shared memory for bulk data, and semaphores for synchronization, the next step was to weave them into a coherent protocol. This is where the core design challenge lay. It's not enough to have the right tools; they must be orchestrated correctly.
 
-This raises several critical design questions:
+This raised several critical design questions:
 - When the proxy receives a "file is ready" message, how does it know *where* in the shared memory segment to look for the data?
 - How does the cache know which part of the shared memory is free to use for a new file it just fetched?
 - Is it better to have one single, large shared memory segment that is partitioned and managed, or to create and destroy smaller segments on demand?
 - How are the semaphores associated with the specific data they are protecting?
 
-Answering these questions is the heart of the engineering task. There are many valid patterns one could use to build a robust solution, each with different trade-offs in complexity and performance. The key is to create a clear, unambiguous system of rules that both processes can follow to communicate without error.
+Answering these questions was the heart of the engineering task. There are many valid patterns one could use to build a robust solution, each with different trade-offs in complexity and performance. The key is to create a clear, unambiguous system of rules that both processes can follow to communicate without error.
 
 Getting these details right was the most challenging and rewarding part of the project.
 
@@ -234,7 +232,7 @@ This responsibility extends to cleanup. It's not enough for the system to work; 
 
 Finally, the system had to be robust to the order in which the processes were started. The proxy could launch before the cache was ready, or vice-versa. This meant the connection logic couldn't be a one-time attempt. The proxy, upon starting, had to be prepared to repeatedly attempt a connection to the cache's command channel if it wasn't yet available. This small detail is a classic example of the kind of defensive programming required when building distributed or multi-process systems.
 
-## Conclusion: Building Cooperative Systems
+## Conclusion: Lessons from Building a Cooperative System
 
 This project was a fantastic lesson in the trade-offs of system design. While building a single, monolithic program is often simpler, splitting a system into specialized processes can lead to a more modular, scalable, and maintainable architecture.
 
