--- a/src/content/ideas/2025/parallelism-concurrency/index.mdx
+++ b/src/content/ideas/2025/parallelism-concurrency/index.mdx
@@ -2,6 +2,7 @@
 title: 'Concurrency and Parallelism'
 description: 'A dive into concurrency and parallelism across different levels of computer systems'
 date: '2025-07-29'
+updated: '2025-10-24'
 status: 'complete'
 type: 'idea'
 tags: ['operating-systems', 'multithreading', 'distributed-systems', 'go', 'c++']
@@ -25,14 +26,12 @@ import concurrencyDiagram from "./concurrency-diagram2.png";
 import bandwidthLatency from "./bandwidth-latency.png";
 import userKernelCores from "./user-kernel-cores.png";
 
-In an ideal world, our computers would be infinitely fast and instantly responsive. Every task, from crunching massive datasets to loading a webpage, would complete in the blink of an eye. But in reality, we are bound by the physical limitations of hardware: CPUs have finite clock speeds, and waiting for data from a disk or a network takes time.
+Computer systems are constrained by the physical limitations of hardware, such as CPU clock speeds and the latency of I/O operations. Parallelism and concurrency are two fundamental strategies used in software engineering to address these limitations, aiming to make programs faster and more responsive.
 
-Parallelism and concurrency are the two fundamental strategies software engineers use to fight against these limitations. They are tools for making our programs *faster* and *more responsive* than the underlying hardware would otherwise allow.
+- **Concurrency** is a structural approach for managing multiple tasks over overlapping time periods. It is essential for building responsive applications that can handle slow or unpredictable operations, like network requests, without halting execution. It creates the illusion of doing many things at once, even on a single processor.
+- **Parallelism** is an execution-based strategy for improving performance. It involves breaking a large problem into smaller pieces and executing them simultaneously on multiple processors to achieve results faster.
 
-- **Concurrency** is our tool for managing **responsiveness**. It's a way of structuring a program to handle many slow or unpredictable tasks (like network requests) without grinding to a halt. It creates the illusion of doing many things at once, even on a single processor.
-- **Parallelism** is our tool for achieving raw **speed**. It's about breaking a large problem into smaller pieces and executing them simultaneously on multiple processors to get the answer faster.
-
-This started as notes on Rob Pike's excellent talk on [Google I/O 2012 - Go Concurrency Patterns](https://www.youtube.com/watch?v=f6kdp27TYZs). I've since expanded on the topic to include a more detailed look at the different levels of concurrency and parallelism, and the challenges in concurrent and parallel programming. This article delves into the nuances of these two powerful concepts, exploring how they work, where they differ, and how they are applied at every level of a modern computer system to help us approach the ideal of an infinitely capable machine.
+This article began as notes on Rob Pike's talk, [Go Concurrency Patterns](https://www.youtube.com/watch?v=f6kdp27TYZs), and has been expanded to provide a detailed examination of concurrency and parallelism. It explores how these concepts differ, how they are applied at various levels of a computer system, and the challenges inherent in concurrent and parallel programming.
 
 
 ## Concurrency vs. Parallelism
@@ -115,16 +114,16 @@ Concurrency and parallelism are not just high-level software concepts; they are 
 />
 This hierarchy spans from the smallest unit of computation—a single instruction—up through increasingly larger scales: a single process, a single core, multiple cores, multiple machines, multiple datacenters, and finally multiple regions. Each level introduces new opportunities for concurrency and parallelism, as well as new challenges in coordination and communication.
 
-### 1. Hardware Level: The Foundation of Speed
+### 1. Hardware-Level Parallelism
 
-The fight against latency begins in the silicon. The hardware is where parallelism is born, with features designed to do as much work as possible before hitting the bottleneck of main memory or I/O.
+The effort to manage latency begins at the hardware level. Hardware is the foundation of parallelism, with features designed to do as much work as possible before hitting the bottleneck of main memory or I/O.
 
 *   **Instruction-Level Parallelism (ILP):** Modern CPUs are masters of micro-optimization. They use techniques like **pipelining** (starting a new instruction before the previous one has finished) and **superscalar execution** (having multiple execution units to process several instructions in the same clock cycle) to execute a single stream of code in parallel. This is a form of parallelism that is largely invisible to the programmer but critical for performance.
 *   **Multi-Core and Many-Core Processors:** This is the most familiar form of hardware parallelism. By placing multiple independent processing cores onto a single chip, CPUs can execute completely different streams of instructions (threads) at the same time. This is what enables a modern computer to run the operating system, a web browser, and a music player simultaneously without stuttering. GPUs take this to an extreme with thousands of simpler cores, making them ideal for "embarrassingly parallel" problems like graphics rendering and machine learning.
 *   **Hardware Support for Concurrency:** Hardware also provides features essential for managing concurrency. **Asynchronous I/O** allows a CPU to initiate a slow operation (like reading from a disk) and then switch to other tasks, receiving an interrupt only when the operation is complete. This avoids wasting cycles and is a key mechanism for building responsive systems.
 
 
-### 2. Operating System Level: The Master Scheduler
+### 2. Operating System-Level Concurrency
 
 The Operating System (OS) is the foundation for concurrency on a modern computer. It provides the core abstractions and mechanisms that software relies on to manage multiple tasks and utilize multi-core hardware. Its primary job is to manage system resources, including CPU time, and hide the immense latency of I/O operations from applications.
 
@@ -140,7 +139,7 @@ The Operating System (OS) is the foundation for concurrency on a modern computer
 
 
 
-### 3. Application Level: Concurrency Models in Practice
+### 3. Application-Level Concurrency Models
 
 While the OS provides the fundamental building blocks (kernel threads), this is the level where developers actively design and build concurrent systems. Programmers use a variety of models, each with different trade-offs, to harness the power of the underlying OS and hardware. These models exist on a spectrum, from direct control over OS threads to higher-level abstractions managed by a language runtime.
 
@@ -212,7 +211,7 @@ In distributed computing, we move beyond a single machine. Here, multiple comput
 
 While concurrency and parallelism offer tremendous power to build faster and more responsive applications, they also introduce a new class of difficult bugs that are notoriously hard to find, reproduce, and fix. Ensuring that a concurrent program is both correct and performant requires careful design and a deep understanding of the potential pitfalls.
 
-### Correctness: The Fight Against Nondeterminism
+### Correctness and Nondeterminism
 
 The core challenge of concurrent programming is **nondeterminism**. When multiple threads execute at the same time, their operations can interleave in countless ways, and not all of them are correct.
 
@@ -223,7 +222,7 @@ The core challenge of concurrent programming is **nondeterminism**. When multipl
     *   **Livelock:** Threads are actively executing but are unable to make progress. They are trapped in a loop of responding to each other's state changes without doing any useful work, like two people trying to pass in a hallway and repeatedly stepping aside in the same direction.
     *   **Starvation:** A thread is perpetually denied access to the resources it needs to do its work, often because other "greedier" threads are monopolizing them.
 
-### Consistency: Ensuring a Coherent View
+### Consistency Models and Challenges
 
 In a concurrent or distributed system, ensuring that all parts of the system have a consistent view of shared data is a major challenge.
 
@@ -231,7 +230,7 @@ In a concurrent or distributed system, ensuring that all parts of the system hav
 
 *   **Data Consistency in Distributed Systems:** This problem is magnified in distributed systems. When data is replicated across multiple machines, how do you keep it in sync? This leads to a fundamental trade-off, often summarized by the CAP theorem. Systems can choose **strong consistency**, where all clients have the same view of the data at all times (at the cost of higher latency), or **eventual consistency**, where replicas will converge over time (offering lower latency and higher availability but with the risk of reading stale data).
 
-### The Cost of Coordination
+### Coordination Overhead
 
 The tools we use to solve these correctness and consistency problems are not free. Synchronization mechanisms are essential, but they come with their own performance and complexity costs.
 
