--- a/src/content/ideas/2025/dl-retro/index.mdx
+++ b/src/content/ideas/2025/dl-retro/index.mdx
@@ -11,8 +11,8 @@ draft: true
 audience: 'All'
 media_subpath: "/ideas/dl-retro/"
 image:
-  path: "./geologic-layers.png"
-  alt: 'Geologic Layers'
+  path: "./hero-green-ripples.png"
+  alt: 'Green Ripples'
 hideCaption: true
 ---
 
@@ -48,7 +48,19 @@ We'll look at each module in turn, connecting the lecture concepts to the hands-
 
 ## Module 1: Introduction to Neural Networks
 
-This module lays the groundwork for the entire course, starting from first principles. It begins with simple linear classifiers and the core optimization algorithm that powers deep learning: gradient descent. From there, we build up to a full understanding of a "vanilla" neural network. The key concept is the **computational graph**, which represents the network's operations as a directed graph, making it possible to efficiently calculate gradients for all the model's parameters using the chain rule—a process known as **backpropagation**.
+This module lays the groundwork for the entire course, starting from first principles. We formalize supervised learning as the minimization of a loss functional
+
+$$
+\min_{\theta} \mathcal{L}(\theta) = -\frac{1}{N} \sum_{i=1}^N \left[ y_i \log \hat{y}_i + (1-y_i) \log (1-\hat{y}_i) \right],
+$$
+
+and then study how gradient descent iteratively updates the parameters by
+
+$$
+\theta^{(t+1)} = \theta^{(t)} - \eta \nabla_\theta \mathcal{L}(\theta^{(t)}).
+$$
+
+From there, we build up to a full understanding of a "vanilla" neural network. The key concept is the **computational graph**, which represents the network's operations as a directed graph so we can apply the chain rule efficiently—**backpropagation** is simply reverse-mode automatic differentiation on this graph.
 
 <Figure
   src={computationalGraph}
@@ -71,7 +83,13 @@ This hands-on experience provides a deep intuition for how neural networks learn
 
 ## Module 2: Convolutional Neural Networks
 
-This module dives into Convolutional Neural Networks (CNNs), the architecture that revolutionized computer vision. We learn about the key building blocks: **convolutional layers**, which apply learnable filters to input images to detect features like edges and textures, and **pooling layers**, which downsample the feature maps to reduce dimensionality and create translational invariance. We explore classic CNN architectures and the techniques used to visualize what they've learned.
+This module dives into Convolutional Neural Networks (CNNs), the architecture that revolutionized computer vision. We learn about the key building blocks: **convolutional layers**, which apply learnable filters to input images to detect features like edges and textures, and **pooling layers**, which downsample the feature maps to reduce dimensionality and create translational invariance. The discrete convolution that drives each layer is written as
+
+$$
+(f * k)_{i,j} = \sum_m \sum_n f_{i+m, j+n}\, k_{m,n},
+$$
+
+so analyzing how receptive fields grow with depth feels much more concrete than when I first encountered CNNs in a purely code-first way. We explore classic CNN architectures and the techniques used to visualize what they've learned.
 
 <Figure
   src={cnn}
@@ -85,9 +103,19 @@ This module dives into Convolutional Neural Networks (CNNs), the architecture th
 
 ## Module 3: Structured Neural Representations
 
-This module shifts focus from images to sequential data, like text and time series. We begin with **Recurrent Neural Networks (RNNs)** and their more powerful variant, **Long Short-Term Memory (LSTM)** networks, which are designed to handle long-range dependencies in data.
+This module shifts focus from images to sequential data, like text and time series. We begin with **Recurrent Neural Networks (RNNs)** and their more powerful variant, **Long Short-Term Memory (LSTM)** networks, which are designed to handle long-range dependencies in data. A recurrent cell propagates information via
 
-The highlight of this module is the **Transformer architecture**, introduced in the seminal paper "Attention Is All You Need." Transformers dispense with recurrence entirely and rely on a mechanism called **self-attention** to weigh the importance of different words in a sequence. This allows for massive parallelization and has made Transformers the state-of-the-art for nearly all NLP tasks.
+$$
+h_t = \tanh (W_{hh} h_{t-1} + W_{xh} x_t + b_h),
+$$
+
+while LSTMs extend this equation with gating to maintain a long-term cell state. The highlight of this module is the **Transformer architecture**, introduced in the seminal paper "Attention Is All You Need." Transformers dispense with recurrence entirely and rely on a mechanism called **self-attention** to weigh the importance of different words in a sequence:
+
+$$
+\text{Attention}(Q,K,V) = \text{softmax}\left(\frac{QK^\top}{\sqrt{d_k}}\right) V.
+$$
+
+This allows for massive parallelization and has made Transformers the state-of-the-art for nearly all NLP tasks. Compared with [yxlow's 2022 experience](https://lowyx.com/posts/gt-dl/)—which emphasized reinforcement learning earlier—our Spring 2025 section devoted **Project 3** entirely to RNNs, LSTMs, and Transformers so we could push sequence-to-sequence models further before touching policy gradients.
 
 {/* <Figure
   src={transformer}
@@ -95,25 +123,55 @@ The highlight of this module is the **Transformer architecture**, introduced in 
   caption="The Transformer architecture, based on self-attention, has become the dominant model for natural language processing tasks."
 /> */}
 
-**Assignment 4** is an extensive project where you implement several sequence models:
+**Assignment 4** (my numbering) is an extensive project where you implement several sequence models:
 *   RNN and LSTM networks.
 *   A Sequence-to-Sequence (Seq2Seq) model with attention.
 *   The full Transformer model (encoder and decoder).
 
-The final part of the assignment involves training a model to translate German to English, comparing the performance of the traditional Seq2Seq model against the more advanced Transformer.
+The final part of the assignment involves training a model to translate German to English, comparing the performance of the traditional Seq2Seq model against the more advanced Transformer, mirroring the techniques documented in [yxlow's course notes](https://lowyx.com/posts/gt-dl-notes/) but with newer PyTorch primitives.
 
 ## Module 4: Advanced Topics
 
-The final module provides a glimpse into the broader applications of deep learning.
-*   **Deep Reinforcement Learning**: Combining deep neural networks with reinforcement learning to learn complex behaviors in environments like video games.
-*   **Unsupervised and Semi-Supervised Learning**: Techniques for learning from data with few or no labels.
-*   **Generative Models**: We explore models like **Generative Adversarial Networks (GANs)**, which consist of two competing neural networks—a generator and a discriminator—that learn to produce realistic new data, such as images.
+The final module provides a glimpse into the broader applications of deep learning and is where my experience diverged most from yxlow's recap. While the 2022 run concluded with reinforcement learning-heavy material, our **Project 4** centered on generative modeling for FashionMNIST: VAEs, GANs, and even a tiny diffusion model.
+
+*   **Deep Reinforcement Learning**: We still covered the policy gradient and Q-learning families conceptually, but primarily as context for how deep nets integrate with classical RL objectives.
+*   **Variational Autoencoders (VAEs)**: We implemented the evidence lower bound
+
+    $$
+    \mathcal{L}_{\text{ELBO}} = \mathbb{E}_{q_\phi(z|x)}[\log p_\theta(x|z)] - D_{\text{KL}}(q_\phi(z|x) \parallel p(z)),
+    $$
+
+    which enforces both reconstruction fidelity and a structured latent prior.
+*   **Generative Adversarial Networks (GANs)**: Training revolved around the minimax problem
+
+    $$
+    \min_G \max_D \mathbb{E}_{x \sim p_{\text{data}}}[\log D(x)] + \mathbb{E}_{z \sim p(z)}[\log(1-D(G(z)))].
+    $$
+
+    Implementing the alternating optimization loop demystified the stability issues everyone warns about.
+*   **Diffusion Models**: We explored how iteratively denoising a sample follows the reweighted score-matching objective, with the forward process defined as
+
+    $$
+    q(x_t | x_{t-1}) = \sqrt{1-\beta_t}\, x_{t-1} + \sqrt{\beta_t}\, \epsilon,
+    $$
+
+    and learned networks predicting either $\epsilon$ or $x_0$.
 
 {/* <Figure
   src={gan}
   alt="Generative Adversarial Network"
   caption="A GAN consists of a Generator that creates fake images and a Discriminator that tries to distinguish them from real images. Through this competition, both networks improve."
 /> */}
+
+## Assignment Writeups
+
+For readers who prefer compact, assignment-by-assignment recaps, I pulled my writeups into focused posts:
+
+1. [DL A1 — Backprop from Scratch](/ideas/2025/dl-a1/): NumPy-based MNIST pipelines, theory problems, and paper reviews.
+2. [DL A2 — Practical CNNs and Imbalanced Data](/ideas/2025/dl-a2/): PyTorch CNNs on CIFAR-10 plus class-balanced focal loss experiments with ResNet-32.
+3. [DL A3 — Sequence Models, Attention, and Translation](/ideas/2025/dl-a3/): LSTMs, Seq2Seq with cosine attention, and Transformers for German→English.
+4. [DL A4 — VAEs, GANs, and Diffusion on FashionMNIST](/ideas/2025/dl-a4/): Generative modeling lab notes (VAE, GAN, DDPM) across MNIST/FashionMNIST.
+5. [DL Final Project — Crosscoding Reasoning Upgrades](/ideas/2025/dl-final-project/): Fine-tuning Qwen2.5-0.5B-Instruct on s1k and comparing representations with Crosscoders.
 
 ## Group Project
 
